Documentazione API ricorrenza completata, fix vari
